--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="info">info</string>
     <string name="back_button">Back button</string>
     <string name="cadastrar_maiusculo">CADASTRAR</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="home">Home</string>
+    <string name="gastos">Gastos</string>
+    <string name="entradas">Entradas</string>
 </resources>
