--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="home">Home</string>
     <string name="gastos">Gastos</string>
     <string name="entradas">Entradas</string>
+    <string name="mywallet">MyWallet</string>
 </resources>
