--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,14 @@
     <string name="gastos">Gastos</string>
     <string name="entradas">Entradas</string>
     <string name="mywallet">MyWallet</string>
+    <string name="descricao">Descrição</string>
+    <string name="categoria">Categoria</string>
+    <string name="data_x_hora">Data x hora</string>
+    <string name="valor">Valor</string>
+    <string name="title_activity_profile">ProfileActivity</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">Hello Square World!</string>
 </resources>
